# egnn-crystal-classifier

./: .gitignore  README.md  pyproject.toml
src/egnn_crystal_classifier/: __init__.py  constants.py  dc4.py  scripts.py
src/egnn_crystal_classifier/amorphous/: coherence.py  delta_cutoffs.npy  outlier.py  outlier_precompute.py  perfect_embeddings.npy
src/egnn_crystal_classifier/benchmarking/: heuristics.py  run.py  visualize.py
src/egnn_crystal_classifier/benchmarking/results/: al_fcc_results.csv  al_fcc_timings.csv  ge_cd_results.csv  ge_cd_timings.csv  li_bcc_results.csv  li_bcc_timings.csv  ti_hcp_results.csv  ti_hcp_timings.csv
src/egnn_crystal_classifier/data_gen/: gen.py
src/egnn_crystal_classifier/data_prep/: data_handler.py  graph_construction.py
src/egnn_crystal_classifier/ml_model/: label_map.json  model.py  model_best.pth
src/egnn_crystal_classifier/ml_train/: hparams.py  train.py
