[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egnn-crystal-classifier"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "torch==2.7.0+cu126",
  "torch-scatter>=2.1.2,<2.2.0",
  "torch-sparse>=0.6.18,<0.7.0",
  "torch-cluster>=1.6.3,<1.7.0",
  "torch-geometric>=2.6.1,<2.7.0",
  "torch-spline-conv>=1.2.2,<1.3.0",
  "modal>=1.0.4,<2.0.0",
  "tqdm>=4.67.1,<5.0.0",
  "ovito>=3.12.4,<4.0.0",
  "matplotlib>=3.10.3,<4.0.0",
  "numpy>=2.0.0,<3.0.0",
  "scipy>=1.13.0,<1.14.0",
  "pandas>=2.0.0,<2.4.0",
]

[project.optional-dependencies]
dev = ["mypy>=1.16.1"]

[tool.mypy]
strict = true
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = "torch_geometric.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch_scatter.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.spatial.*"
ignore_missing_imports = true